# RPGFginRs

./: Cargo.toml  package-lock.json  package.json  webpack.config.js
RPGFgin/crate/src/: lib.rs
RPGFgin/shaders/: cubemap.frag  cubemap.vert  default.frag  default.vert  line.frag  line.vert
RPGFgin/src/: logger.ts  main.ts
RPGFgin/src/core/: RenderableObject.ts  camera.ts  cameraInputControl.ts  control.ts  cubeTexture.ts  input.ts  material.ts  mesh.ts  model.ts  raycast.ts  renderer.ts  scene.ts  shader.ts  staticIndexBuffer.ts  staticVerticesBuffer.ts  texture.ts
RPGFgin/src/debug/: datGui.ts
RPGFgin/src/loaders/: fileLoader.ts  mtlParser.ts  objLoader.ts
RPGFgin/src/math/: mat4.ts  vec2.ts  vec3.ts
RPGFgin/src/primitives/: cube.ts
RPGFgin/src/types/: IIntersection.ts  ITexture.ts
RPGFgin/src/utils/: convert.ts
sanbox/: index.html  test2.mtl
sanbox/src/: cubeMapObject.ts  game.ts  lineGenerator.ts  lineMesh.ts  main.ts  sceneManager.ts
src/: Mesh.rs  ObjLoader.rs  lib.rs
src/core/: Camera.rs  EngineCore.rs  EventBus.rs  IndexBuffer.rs  Shader.rs  StaticBuffer.rs  Types.rs  mod.rs
static/: LP1.mtl  index.html
